k8_configs/alertmanager-service.yaml
# ===================================================================
# 3. Alertmanager 서비스 (Service)
# ===================================================================
### NEW ###
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
spec:
  selector:
    app: alertmanager
  ports:
    - protocol: TCP
      port: 9093
      targetPort: 9093
  type: ClusterIP # 프로메테우스가 내부에서만 접근하므로 ClusterIP로 충분
