k8_configs/debezium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium-connect
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debezium-connect
  template:
    metadata:
      labels:
        app: debezium-connect
    spec:
      containers:
      - name: debezium-connect
        image: debezium/connect:2.3
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: debezium-connect
  namespace: default
spec:
  selector:
    app: debezium-connect
  ports:
    - port: 8083
      targetPort: 8083
