k8_configs/elastic_depl_serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
          command: ["/bin/sh", "-c"]
          args:
            - |
              if ! bin/elasticsearch-plugin list | grep -q "analysis-nori"; then
                echo "Installing nori plugin..."
                bin/elasticsearch-plugin install analysis-nori --batch
              else
                echo "Nori plugin already installed"
              fi
              exec /usr/local/bin/docker-entrypoint.sh elasticsearch
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          resources:
            limits:
              cpu: "1000m" # CPU 제한 1코어로 감소
              memory: "3Gi" # 컨테이너 메모리 제한 3GB로 감소
            requests:
              cpu: "500m" # CPU 요청 0.5코어로 감소
              memory: "2Gi" # 컨테이너 메모리 요청 2GB로 감소
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
            - name: elasticsearch-plugins
              mountPath: /usr/share/elasticsearch/plugins
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
        - name: elasticsearch-plugins
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  type: LoadBalancer
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
