k8_configs/jaeger-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686
        - containerPort: 14250
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  ports:
  - name: http
    port: 16686
    targetPort: 16686
  - name: grpc
    port: 14250
    targetPort: 14250
  selector:
    app: jaeger
