k8_configs/logstash_depl_serv.yaml
# Logstash deployment and service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.11.1
          ports:
            - containerPort: 5044
              name: beats
            - containerPort: 9600
              name: http
          volumeMounts:
            - name: logstash-config
              mountPath: /usr/share/logstash/pipeline
      volumes:
        - name: logstash-config
          configMap:
            name: logstash-config

---
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
spec:
  type: LoadBalancer
  selector:
    app: logstash
  ports:
    - protocol: TCP
      port: 5044
      targetPort: 5044
      name: beats
    - protocol: TCP
      port: 9600
      targetPort: 9600
      name: http
