k8_configs/mongo_depl_serv.yaml
# StatefulSet Code (not Deployment)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-stateful
  labels:
    app: mongodb
spec:
  serviceName: "mongodb-service"
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          # image: mongo # Pull the mongo docker image from Docker Hub, make sure for mac m1 arm64 architecture, mongodb's version is compatible
          # image: mongodb-community-server # Pull the mongo docker image from Docker Hub, make sure for mac m1 arm64 architecture, mongodb's version is compatible
          image: mongo:6.0.12-jammy # Pull the mongo docker image from Docker Hub, make sure for mac m1 arm64 architecture, mongodb's version is compatible

          ports:
            - containerPort: 27017 # This is default port of MongoDB
          command: ["mongod", "--replSet", "rs0", "--bind_ip_all"] # Added Replica Set configuration
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts: # Persistent Data
            - name: mongodb-data
              mountPath: /data/db # this is the directory inside the container where MongoDB stores data
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi # 256 MB storage

---
# Service file for MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # Port of system
      targetPort: 27017 # Port of the docker image so it's binding ports as: -p 27017:27017
