k8_configs/monstache_depl_serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monstache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monstache
  template:
    metadata:
      labels:
        app: monstache
    spec:
      containers:
        - name: monstache
          image: rwynn/monstache:6
          args: ["-f", "/config/config.toml"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /config
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config-volume
          configMap:
            name: monstache-config
---
apiVersion: v1
kind: Service
metadata:
  name: monstache-service
spec:
  selector:
    app: monstache
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
