k8_configs/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus-sa
      containers:
        - name: prometheus
          image: prom/prometheus:v2.45.0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            # --- Alertmanager와 통신하기 위한 설정 추가 ---
            - "--web.enable-lifecycle"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            # --- 알람 규칙 파일을 마운트하기 위한 볼륨 추가 ---
            - name: prometheus-rules-volume
              mountPath: /etc/prometheus/rules/
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
        # --- 알람 규칙 ConfigMap을 볼륨으로 정의 ---
        - name: prometheus-rules-volume
          configMap:
            name: prometheus-rules
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
