k8_configs/ingress.yaml
# Re ROute the incoming traffic coming to my-deployed-app.com to 192.168.49.2 (or wherever the fastapi-app-service is running)
# NOTE: We need to edit `/etc/hosts` to map  as: echo '192.168.49.2 my-deployed-app.com' | sudo tee -a /etc/hosts
# Then we need to enable nginx for routing as 'minikube addons enable ingress'

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"

    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

spec:
  rules:
  - host: my-deployed-app.com
    http:
      paths:
      # User Service
      - path: /api/users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8000
      
      # Product Service
      - path: /api/products(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8000
      
      # Order Service
      - path: /api/orders(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8000

      # Docs routes
      - path: /docs(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service  # default service for docs
            port:
              number: 8000
      
      - path: /redoc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service  # default service for redoc
            port:
              number: 8000

      # Default route
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8000
  
  # MongoDB Express route
  - host: service.mongo.express
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081

  - host: dashboard.kibana
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-service
            port:
              number: 5601
